--- a/src/app/pages/contact-list-page/contact-list-page.html
+++ b/src/app/pages/contact-list-page/contact-list-page.html
@@ -1,5 +1,5 @@
 <p>contact-list-page works!</p>
-<a routerLink="/">Log in</a>
+<a routerLink="/login">Log in</a>
 
 @for (contacto of contactos; track $index){
     <p><span>{{contacto}}</span></p>
