--- a/src/app/pages/login-page/login-page.html
+++ b/src/app/pages/login-page/login-page.html
@@ -1,2 +1,22 @@
-<h1>LOGIN</h1>
-<a routerLink="/">Contact list</a>
+<section>
+    <h1>LOGIN</h1>
+    <a routerLink="/">Contact list</a>
+    
+    <form>
+        <label for="nombreUsuario">
+            <img src="../../../img/vecteezy_user-account-icon-for-your-design-only_21079672.png" alt="" width="24" height="24">
+            <input id="nombreUsuario" type="text" placeholder="Usuario">
+        </label>
+        <label for="">
+            <img src="../../../img/pngwing.com (1).png" alt="" width="24" height="24">
+            <input id="password" type="password" placeholder="Contraseña">
+        </label>
+        <label>
+            <input type="checkbox" placeholder="Recordar">
+            <span>Recordar cuenta</span>
+        </label>
+        <button>Iniciar sesión</button>
+        <p>No tenés cuenta? <a routerLink="/register">Registrate</a></p>
+    </form>
+    
+</section>
