--- a/src/app/pages/contact-list-page/contact-list-page.html
+++ b/src/app/pages/contact-list-page/contact-list-page.html
@@ -1,8 +1,16 @@
 <p>contact-list-page works!</p>
 <a routerLink="/login">Log in</a>
 
-@for (contacto of contactos; track $index){
-    <p><span>{{contacto}}</span></p>
+@for (contacto of contactos; track $index) {
+    <app-contact-list-item [contacto] = "contacto" [index] = "$index"/>
 } @empty {
-    
+    <p>No hay contactos</p>
 }
+<div [class.importante]="logueado === true">
+    <p>Sesión</p>
+    @if(logueado){
+        <button (click)="desloguear()">Cerrar sesión</button>
+    } @else {
+        <button (click)="loguear()">Iniciar sesión</button>
+    }
+</div>
