--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,1 +1,24 @@
-<p>register-page works!</p>
+<section>
+    <div class="bg-left lado">
+        <h1>Registrate</h1>
+        <form>
+            <label>
+                <img src="img/user.png" alt="" width="24" height="24">
+                <input id="nombreUsuario" type="text" placeholder="Usuario">
+            </label>
+            <label for="">
+                <img src="img/password.png" alt="" width="24" height="24">
+                <input id="password" type="password" placeholder="Contraseña">
+            </label>
+            <label for="">
+                <img src="img/password.png" alt="" width="24" height="24">
+                <input id="password" type="password" placeholder="Repetir contraseña">
+            </label>
+            <button>Registrarse</button>
+            <p>Ya tenés cuenta? <a routerLink="/login">Iniciar Sesion</a></p>
+        </form>
+        <a routerLink="/">Contact list</a>
+    </div>
+    <div class="bg-right lado">
+    </div>
+</section>
