--- a/src/app/pages/login-page/login-page.scss
+++ b/src/app/pages/login-page/login-page.scss
@@ -1,18 +1,47 @@
+// section{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: start;
+//     width: 100%;
+//     height: 100vh;
+//     gap: 16px;
+// }
+
 section{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-}
+    width: 100vw;
 
-form{
+}
+.bg-left{
     background-color: var(--background-secundary-color);
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+}
+.bg-right{
+    background-color: var(--background-primary-color);
+    width: 65%;
+}
+.lado{
+    height: 100%;
+}
+h1{
+    font-size: var(--font-size-h1);
+}
+
+form{
+    // background-color: var(--background-secundary-color);
+    display: flex;
+    flex-direction: column;
+    width: var(--width-not-logged);
+    padding: 80px;
     gap: 15px;
-    border-radius: 25px;
+    border-radius: 5px;
+    // box-shadow: 0px 0px 20px 1px #b6b6b6;
 }
 
 input{
@@ -22,7 +51,8 @@ input{
     padding: 10px;
 }
 input::placeholder{
-    color: var(--font-color);
+    font-size: var(--font-size);
+
 }
 
 label{
@@ -31,7 +61,7 @@ label{
 }
 
 img{
-    max-width: 100%;
+    max-width: 20px;
     height: auto;
     display: inline-block;
 }
@@ -41,6 +71,7 @@ img{
     justify-content: center;
     align-items: center;
     gap: 5px;
+    font-size: var(--font-size);
 }
 
 button{
@@ -48,6 +79,11 @@ button{
     border-radius: 25px;
     padding: 10px;
     border: none;
+    font-size: var(--font-size);
+}
+
+p{
+    font-size: var(--font-size);
 }
 
 
