--- a/src/app/layouts/logged-layout/logged-layout.html
+++ b/src/app/layouts/logged-layout/logged-layout.html
@@ -1,1 +1,8 @@
-<p>logged-layout works!</p>
+<section>
+    <nav>
+        <a href="">Usuarios</a>
+        <a href="">Grupos</a>
+    </nav>
+
+    <router-outlet/>
+</section><nav>
