--- a/src/app/pages/register-page/register-page.scss
+++ b/src/app/pages/register-page/register-page.scss
@@ -1,48 +1,36 @@
 section{
     display: flex;
-    height: 100vh;
-    width: 100vw;
-
-}
-.bg-left{
-    background-color: var(--background-secundary-color);
-    display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    width: 35%;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    gap: 64px;
 }
-.bg-right{
-    background-color: var(--background-primary-color);
-    width: 65%;
-}
-.lado{
-    height: 100%;
-}
+
+
 h1{
     font-size: var(--font-size-h1);
+    font-weight: 800;
+}
+h2{
+    font-size: var(--font-size-h2);
 }
 
 form{
-    // background-color: var(--background-secundary-color);
+    background-color: var(--background-secundary-color);
     display: flex;
     flex-direction: column;
-	width: var(--width-not-logged);
-    padding: 80px;
+    width: var(--width-not-logged);
+    padding: 60px 35px;
+    gap: 30px;
+    border-radius: var(--border-radius);
+    box-shadow: 0px 0px 20px 1px #b6b6b6;
+}
+form div{
+    display: flex;
+    flex-direction: column;
     gap: 15px;
-    border-radius: 5px;
-    // box-shadow: 0px 0px 20px 1px #b6b6b6;
-}
-
-input{
-    background: transparent;
-    border: none;
-    border-bottom: 2px solid white; 
-    padding: 10px;
-}
-input::placeholder{
-    font-size: var(--font-size);
-
 }
 
 label{
@@ -50,28 +38,70 @@ label{
     align-items: center;
 }
 
+input{
+    background: transparent;
+    border: none;
+    padding: 10px;
+    background-color: var(--input-bar-color);
+    
+    
+}
+input::placeholder{
+    font-size: var(--font-size);
+}
+.input-text{
+    width: 100%;
+    box-shadow: 0 2px var(--button-secundary-color);
+    transition: box-shadow 0.3s ease;
+}
+.input-text:focus{
+    outline: none;
+    box-shadow: 0 2px var(--button-primary-color);
+
+}
+
+
 img{
     max-width: 20px;
     height: auto;
     display: inline-block;
 }
 
-.checkbox{
+.label-checkbox{
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 5px;
-    font-size: var(--font-size);
+    font-size: var(--font-size-checkbox);
+}
+.input-checkbox {
+    accent-color: var(--button-primary-color);
+    margin: 0;
 }
 
 button{
-    background-color: var(--boton-color);
-    border-radius: 25px;
+    background-color: var(--button-primary-color);
+    color: var(--font-button-primary-color);
+    border-radius: var(--border-radius);
     padding: 10px;
     border: none;
     font-size: var(--font-size);
+    font-weight: 600;
+}
+button:hover{
+    background-color: var(--button-primary-hover-color);
+    color: var(--font-button-primary-color);
+}
+button:active{
+    color: var(--font-button-primary-active-color);
+
 }
 
 p{
-    font-size: var(--font-size);
+    font-size: var(--font-size-p);
+    text-align: end;
+}
+
+.p-error{
+    visibility: hidden
 }
