Agrego Formulario Angular En login y register

--- a/src/app/pages/contact-list-page/contact-list-page.html
+++ b/src/app/pages/contact-list-page/contact-list-page.html
@@ -32,3 +32,6 @@
         @if (phone.dirty && phone.invalid) {
         <p class="error">El telefono es obligatorio y tiene que tener al menos 4 caracteres y no mas de 50</p>
         }
+    </div>
+    <button>aaa</button>
+</form>
