--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,22 +1,34 @@
 <section>
-        <h1>Agenda de contactos</h1>
-        <form>
-            <h2>Registrarse</h2>
+    <h1>Agenda de contactos</h1>
+    <form (ngSubmit)="registerUser(registerUserForm.value)" #registerUserForm="ngForm">
+        <h2>Registrarse</h2>
+        <div>
             <div>
-                <label>
-                    <input class="input-text" type="text" placeholder="Email">
-                </label>
-                <label>
-                    <input class="input-text" type="password" placeholder="Contraseña">
-                </label>
-                <label>
-                    <input class="input-text" type="password" placeholder="Repetir contraseña">
-                </label>
-                <p class="p-error">ERROR</p>
+                <label for="first-name">Nombre*</label>
+                <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
+                    #firstName="ngModel">
+                @if (firstName.dirty && firstName.invalid) {
+                <p class="error">El nombre es obligatorio</p>
+                }
             </div>
             <div>
-                <button>Crear cuenta</button>
-                <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
+                <label for="last-name">Apellido</label>
+                <input type="text" name="lastName" id="last-name" ngModel maxlength="50">
             </div>
-        </form>
+            <label>
+                <input class="input-text" type="text" placeholder="Email">
+            </label>
+            <label>
+                <input class="input-text" type="password" placeholder="Contraseña">
+            </label>
+            <label>
+                <input class="input-text" type="password" placeholder="Repetir contraseña">
+            </label>
+            <p class="p-error">ERROR</p>
+        </div>
+        <div>
+            <button>Crear cuenta</button>
+            <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
+        </div>
+    </form>
 </section>
