--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,6 +1,6 @@
 <section>
     <h1>Agenda de contactos</h1>
-    <form (ngSubmit)="registerUser(registerUserForm.value)" #registerUserForm="ngForm">
+    <form (ngSubmit)="registerUser(registerUserForm)" #registerUserForm="ngForm">
         <h2>Registrarse</h2>
         <div>
             <div>
@@ -15,15 +15,18 @@
                 <label for="last-name">Apellido</label>
                 <input type="text" name="lastName" id="last-name" ngModel maxlength="50">
             </div>
-            <label>
-                <input class="input-text" type="text" placeholder="Email">
-            </label>
-            <label>
-                <input class="input-text" type="password" placeholder="Contraseña">
-            </label>
-            <label>
-                <input class="input-text" type="password" placeholder="Repetir contraseña">
-            </label>
+            <div>
+                <label for="email">Email</label>
+                <input class="input-text" name="email" id="email" type="text" placeholder="Email" ngModel>
+            </div>
+            <div>
+                <label for="password">Contraseña</label>
+                <input class="input-text" name="password" id="password" type="password" placeholder="Contraseña"ngModel>
+            </div>
+            <div>
+                <label for="password2">Repetir Contraseña</label>
+                <input class="input-text" name="password2" id="password2" placeholder="Repetir contraseña" ngModel>
+            </div>
             <p class="p-error">ERROR</p>
         </div>
         <div>
