--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
@@ -1,8 +1,8 @@
 <section>
     <nav>
-        <a routerLink="/">Contactos</a>
+        <a routerLink="/contacts">Contactos</a>
         <a routerLink="/groups">Grupos</a>
     </nav>
     <router-outlet/>
 
-</section><nav>
+</section>
