--- a/src/app/pages/contact-details-page/contact-details-page.html
+++ b/src/app/pages/contact-details-page/contact-details-page.html
@@ -1,1 +1,11 @@
-<p>contact-details-page works!</p>
+<section>
+    <div>
+        <a routerLink="/contacts">X</a>
+    </div>
+    <div>
+        <p>nombre: </p>
+        <p>{{contact().firstName}}</p>
+    </div>
+</section>
+
+
