--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,7 @@ a{
     // --boton-color: #B9B28A;
 	--nav-bar-top-color: #f0f4f7;
 	--nav-bar-left-color: #00998f;
+	--font-nav-divisor-color: rgba(220, 241, 238, 0.7);
 	--input-text-bar: #fafafa;
 	--font-color:black;
 	--font-button-primary-color: #dcf1ee;
@@ -83,7 +84,7 @@ a{
 	--border-radius: 12px;
 
 
-	--width-not-logged: 400px;
+
 
 }
 
