--- a/src/app/pages/contact-list-page/contact-list-page.html
+++ b/src/app/pages/contact-list-page/contact-list-page.html
@@ -1,18 +1,74 @@
-<section>
-    <div class="contacts">
-        <p>contact-list-page works!</p>
-        
-        @for (contact of contactsService.contacts; track $index) {
-        <app-contact-list-item [contact]="contact" [index]="$index" />
-        } @empty {
-        <p>No hay contactos</p>
-        }
-        <a routerLink="/add-contact">++</a>
+<!-- <section>
+    <div class="contacts-section">
+        <div>
+            <h1>Contactos</h1>
+        </div>
+        <div class="search-container">
+            <label for="search">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
+                    <path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/>
+                </svg>
+            </label>
+            <input type="search" name="search" id="">
+        </div>
+        <div>
+            @for (contact of contactsService.contacts; track $index) {
+                <app-contact-list-item [contact]="contact" [index]="$index" />
+            } @empty {
+                <p>No hay contactos</p>
+            }
+        </div>
         <div class="add-contact-button-container">
-            <a class="add-contact-button" routerLink="./add">+</a>
+            <a class="add-contact-button" routerLink="./add">
+                <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 0 24 24" width="32px">
+                    <path d="M0 0h24v24H0V0z" fill="none"/><path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0-6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm0 8c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4zm-6 4c.22-.72 3.31-2 6-2 2.7 0 5.8 1.29 6 2H9zm-3-3v-3h3v-2H6V7H4v3H1v2h3v3z"/>
+                </svg>
+            </a>
         </div>
     </div>
-    <router-outlet/>
+    <div>
+        <router-outlet />
+    </div>
+</section> -->
 
-
+<section>
+    <div class="contacts-section">
+        <div>
+            <h1>Contactos</h1>
+        </div>
+            <!-- @if (contactsService.contacts.length != 0) {
+            <div class="search-container">
+                <label for="search">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
+                        <path
+                            d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z" />
+                    </svg>
+                </label>
+                <input type="search" name="search" id="">
+            </div>
+            <div>
+                @for (contact of contactsService.contacts; track $index) {
+                <app-contact-list-item [contact]="contact" [index]="$index" />
+                }
+            </div>
+            <div class="add-contact-button-container">
+                <a class="add-contact-button" routerLink="./add">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="32px" viewBox="0 0 24 24" width="32px">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path
+                            d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0-6c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm0 8c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4zm-6 4c.22-.72 3.31-2 6-2 2.7 0 5.8 1.29 6 2H9zm-3-3v-3h3v-2H6V7H4v3H1v2h3v3z" />
+                    </svg>
+                </a>
+            </div>
+            }
+            @else {
+            <div class="no-contacts-div">
+                <p>No hay contactos</p>
+                <a routerLink="/contacts/add">Agrega tu primer contacto</a>
+            </div>
+            } -->
+    </div>
+    <div>
+        <router-outlet />
+    </div>
 </section>
