--- a/src/app/pages/contact-list-page/contact-list-page.scss
+++ b/src/app/pages/contact-list-page/contact-list-page.scss
@@ -1,7 +1,46 @@
-section {
+
+
+section{
     display: flex;
-    height: 100vh;
-    gap: 30px;
+    flex-direction: column;
+    width: 100%;
+    flex: 1;
+    overflow: auto;
+}
+
+
+.contacts-section {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--background-secundary-color);
+    // border-radius: var(--border-radius);
+    // padding: 16px;
+    // margin: 16px;
+    width: 100%;
+    height: 100%;
+}
+
+h1{
+    font-size: var(--font-size-h1);
+    margin-bottom: 32px;
+}
+p{
+    font-size: var(--font-size-h2);
+}
+
+.no-contacts-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+}
+
+
+.search-container{
+    display: flex;
+    align-items: center;
 }
 
 .add-contact-button {
@@ -9,9 +48,8 @@ section {
     bottom: 15px;
     right: 20px;
     z-index: 10;
-}
-
-.contacts .details {
-    
-
-}
+    background-color: var(--nav-bar-left-color);
+    border-radius: var(--border-radius);
+    padding: 8px;
+    fill: var(--font-button-primary-color);
+} 
