--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,37 +1,39 @@
-<section>
+<section class="flex-column">
     <h1>Agenda de contactos</h1>
-    <form (ngSubmit)="registerUser(registerUserForm)" #registerUserForm="ngForm">
+    <div class="register-container flex-column">
         <h2>Registrarse</h2>
-        <div>
+        <form (ngSubmit)="registerUser(registerUserForm)" #registerUserForm="ngForm">
             <div>
-                <label for="first-name">Nombre*</label>
-                <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
-                    #firstName="ngModel">
-                @if (firstName.dirty && firstName.invalid) {
-                <p class="error">El nombre es obligatorio</p>
-                }
+                <div>
+                    <label for="first-name">Nombre*</label>
+                    <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
+                        #firstName="ngModel">
+                    @if (firstName.dirty && firstName.invalid) {
+                    <p class="error">El nombre es obligatorio</p>
+                    }
+                </div>
+                <div>
+                    <label for="last-name">Apellido</label>
+                    <input type="text" name="lastName" id="last-name" ngModel maxlength="50">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input name="email" id="email" type="text" placeholder="Email" ngModel>
+                </div>
+                <div>
+                    <label for="password">Contraseña</label>
+                    <input name="password" id="password" type="password" placeholder="Contraseña"ngModel>
+                </div>
+                <div>
+                    <label for="password2">Repetir Contraseña</label>
+                    <input name="password2" id="password2" placeholder="Repetir contraseña" ngModel>
+                </div>
+                <p class="p-error">ERROR</p>
             </div>
             <div>
-                <label for="last-name">Apellido</label>
-                <input type="text" name="lastName" id="last-name" ngModel maxlength="50">
+                <button>Crear cuenta</button>
+                <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
             </div>
-            <div>
-                <label for="email">Email</label>
-                <input class="input-text" name="email" id="email" type="text" placeholder="Email" ngModel>
-            </div>
-            <div>
-                <label for="password">Contraseña</label>
-                <input class="input-text" name="password" id="password" type="password" placeholder="Contraseña"ngModel>
-            </div>
-            <div>
-                <label for="password2">Repetir Contraseña</label>
-                <input class="input-text" name="password2" id="password2" placeholder="Repetir contraseña" ngModel>
-            </div>
-            <p class="p-error">ERROR</p>
-        </div>
-        <div>
-            <button>Crear cuenta</button>
-            <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
-        </div>
-    </form>
+        </form>
+    </div>
 </section>
