--- a/src/app/pages/register-page/register-page.scss
+++ b/src/app/pages/register-page/register-page.scss
@@ -17,21 +17,19 @@ h2{
     font-size: var(--font-size-h2);
 }
 
-form{
+.register-container{
     background-color: var(--background-secundary-color);
-    display: flex;
-    flex-direction: column;
     width: var(--width-not-logged);
     padding: 60px 35px;
     gap: 30px;
     border-radius: var(--border-radius);
     box-shadow: 0px 0px 20px 1px #b6b6b6;
 }
-form div{
+.flex-column{
     display: flex;
     flex-direction: column;
-    gap: 15px;
 }
+
 
 label{
     display: flex;
@@ -43,21 +41,17 @@ input{
     border: none;
     padding: 10px;
     background-color: var(--input-bar-color);
-    
-    
-}
-input::placeholder{
-    font-size: var(--font-size);
-}
-.input-text{
     width: 100%;
     box-shadow: 0 2px var(--button-secundary-color);
     transition: box-shadow 0.3s ease;
 }
-.input-text:focus{
+input::placeholder{
+    font-size: var(--font-size);
+}
+
+input:focus{
     outline: none;
     box-shadow: 0 2px var(--button-primary-color);
-
 }
 
 
