Pagina de agregar contacto mejorada (sin terminar) Agrego servicio de acciones

--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
@@ -1,4 +1,4 @@
-<section class="a">
+<section>
     <div class="nav-bar-section">
         <div>
             <h1>Agenda</h1>
@@ -48,7 +48,7 @@
             <button (click)="authService.logout()">Cerrar sesión</button>
         </div>
     </div>
-    <div>
+    <div class="main-section">
         <router-outlet />
     </div>
 </section>
