--- a/src/app/pages/contact-list-page/contact-list-page.scss
+++ b/src/app/pages/contact-list-page/contact-list-page.scss
@@ -1,24 +1,25 @@
 
-
 section{
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    flex: 1;
-    overflow: auto;
-}
-
-
-.contacts-section {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--background-secundary-color);
-    // border-radius: var(--border-radius);
-    // padding: 16px;
-    // margin: 16px;
     width: 100%;
     height: 100%;
 }
+
+
+.card{
+    display: flex;
+    background-color: var(--background-secundary-color);
+    border-radius: var(--border-radius);
+    width: 100%;
+    margin: 16px;
+    padding: 16px;
+    box-shadow: 0px 0px 10px 3px #dddddd
+}
+
+.contacts-box{
+    transition: all 0.3s ease;
+}
+
 
 h1{
     font-size: var(--font-size-h1);
@@ -33,7 +34,6 @@ p{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
 
 }
 
@@ -53,3 +53,16 @@ p{
     padding: 8px;
     fill: var(--font-button-primary-color);
 } 
+
+.router-outlet-box{
+    transition: all 0.3s ease;
+
+}
+
+.full {
+  flex: 1 1 100%;
+}
+
+.half {
+  flex: 1 1 50%;
+}
