Implemento libreria Sweetalert confirmacion de cerrar sesión

--- a/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
+++ b/src/app/layouts/nav-bar-left-layout/nav-bar-left-layout.html
@@ -45,7 +45,7 @@
             </nav>
         </div>
         <div class="button-container">
-            <button (click)="authService.logout()">Cerrar sesión</button>
+            <button (click)="showLogoutModal()">Cerrar sesión</button>
         </div>
     </div>
     <div class="main-section">
