--- a/src/app/pages/login-page/login-page.scss
+++ b/src/app/pages/login-page/login-page.scss
@@ -13,15 +13,16 @@ h1{
 }
 h2{
     font-size: var(--font-size-h2);
+    margin-bottom: 30px;
 }
 
 .login-container{
     background-color: var(--background-secundary-color);
-    width: var(--width-not-logged);
+    width: var(--wigth-card-no-logged);
     padding: 60px 35px;
-    gap: 30px;
     border-radius: var(--border-radius);
     box-shadow: 0px 0px 20px 1px #b6b6b6;
+
 }
 .flex-column{
     display: flex;
@@ -29,8 +30,7 @@ h2{
 }
 
 label{
-    display: flex;
-    align-items: center;
+    display: none;
 }
 
 input{
@@ -38,7 +38,8 @@ input{
     border: none;
     padding: 10px;
     background-color: var(--input-bar-color);
-    
+    width: 100%;
+    box-sizing: border-box;
     
 }
 input::placeholder{
@@ -56,23 +57,11 @@ input[type="email"]:focus, input[type="password"]:focus{
 }
 
 
-img{
-    max-width: 20px;
-    height: auto;
-    display: inline-block;
-}
-
-.checkbox-container{
+form{
     display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 5px;
-    font-size: var(--font-size-checkbox);
-    width: auto;
-}
-input[type="checkbox"] {
-    accent-color: var(--button-primary-color);
-    margin: 0;
+    flex-direction: column;
+    gap: 10px;
+
 }
 
 button{
@@ -83,6 +72,7 @@ button{
     border: none;
     font-size: var(--font-size);
     font-weight: 600;
+    width: 100%;
 }
 button:hover{
     background-color: var(--button-primary-hover-color);
@@ -96,9 +86,10 @@ button:active{
 p{
     font-size: var(--font-size-p);
     text-align: end;
+    
 }
 
-.p-error{
+.error{
     text-align: start;
     color: red;
     height: 12px;
