--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -4,34 +4,41 @@
         <h2>Registrarse</h2>
         <form (ngSubmit)="registerUser(registerUserForm)" #registerUserForm="ngForm">
             <div>
-                <div>
-                    <label for="first-name">Nombre*</label>
-                    <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
-                        #firstName="ngModel">
-                    @if (firstName.dirty && firstName.invalid) {
-                    <p class="error">El nombre es obligatorio</p>
-                    }
-                </div>
-                <div>
-                    <label for="last-name">Apellido</label>
-                    <input type="text" name="lastName" id="last-name" ngModel maxlength="50">
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input name="email" id="email" type="text" placeholder="Email" ngModel>
-                </div>
-                <div>
-                    <label for="password">Contraseña</label>
-                    <input name="password" id="password" type="password" placeholder="Contraseña"ngModel>
-                </div>
-                <div>
-                    <label for="password2">Repetir Contraseña</label>
-                    <input name="password2" id="password2" placeholder="Repetir contraseña" ngModel>
-                </div>
-                <p class="p-error">ERROR</p>
+                <label for="first-name">Nombre*</label>
+                <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
+                    #firstName="ngModel" autocomplete="fistname">
             </div>
             <div>
+                <label for="last-name">Apellido</label>
+                <input type="text" name="lastName" id="last-name" ngModel maxlength="50" autocomplete="lastname">
+            </div>
+            <div>
+                <label for="email">Email*</label>
+                <input name="email" id="email" type="text" placeholder="Email" ngModel #email="ngModel" required="true"
+                    autocomplete="email">
+            </div>
+            <div>
+                <label for="password">Contraseña*</label>
+                <input name="password" id="password" type="password" placeholder="Contraseña" ngModel
+                    #password="ngModel" autocomplete="new-password" required="true">
+            </div>
+            <div>
+                <label for="password2">Repetir Contraseña*</label>
+                <input name="password2" id="password2" type="password" placeholder="Repetir contraseña" ngModel
+                    #password2="ngModel" autocomplete="new-password" required="true">
+            </div>
+            @if (!firstName.pristine && firstName.invalid || !email.pristine && email.invalid || !password.pristine &&
+            password.invalid || !password2.pristine && password2.invalid || errorRegisterForm) {
+            <p class="error">* Completar campos obligatorios.</p>
+            }
+            <div>
                 <button>Crear cuenta</button>
+                @if (isLoading) {
+                <p class="error">Cargando...</p>
+                }
+                @if (errorRegisterService) {
+                <p class="error">Error indeterminado, intente nuevamente.</p>
+                }
                 <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
             </div>
         </form>
