--- a/src/app/pages/login-page/login-page.scss
+++ b/src/app/pages/login-page/login-page.scss
@@ -16,7 +16,7 @@ h2{
     margin-bottom: 30px;
 }
 
-.login-container{
+.container{
     background-color: var(--background-secundary-color);
     width: var(--wigth-card-no-logged);
     padding: 60px 35px;
@@ -40,17 +40,14 @@ input{
     background-color: var(--input-bar-color);
     width: 100%;
     box-sizing: border-box;
+    box-shadow: 0 2px var(--button-secundary-color);
+    transition: box-shadow 0.3s ease;
     
 }
 input::placeholder{
     font-size: var(--font-size);
 }
-input[type="email"], input[type="password"]{
-    width: 100%;
-    box-shadow: 0 2px var(--button-secundary-color);
-    transition: box-shadow 0.3s ease;
-}
-input[type="email"]:focus, input[type="password"]:focus{
+input:focus{
     outline: none;
     box-shadow: 0 2px var(--button-primary-color);
 
@@ -61,6 +58,7 @@ form{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 30px;
 
 }
 
@@ -90,11 +88,15 @@ p{
 }
 
 .error{
-    text-align: start;
     color: red;
     height: 12px;
 }
 
+
+.spinner{
+    display: flex;
+    justify-content: center;
+}
 
 
 
