--- a/src/app/pages/register-page/register-page.html
+++ b/src/app/pages/register-page/register-page.html
@@ -1,46 +1,51 @@
 <section class="flex-column">
     <h1>Agenda de contactos</h1>
-    <div class="register-container flex-column">
+    <div class="container flex-column">
         <h2>Registrarse</h2>
         <form (ngSubmit)="registerUser(registerUserForm)" #registerUserForm="ngForm">
             <div>
                 <label for="first-name">Nombre*</label>
-                <input type="text" name="firstName" id="first-name" ngModel required="true" maxlength="50"
+                <input type="text" name="firstName" id="first-name" placeholder="Nombre*" ngModel required="true" maxlength="50"
                     #firstName="ngModel" autocomplete="fistname">
             </div>
             <div>
                 <label for="last-name">Apellido</label>
-                <input type="text" name="lastName" id="last-name" ngModel maxlength="50" autocomplete="lastname">
+                <input type="text" name="lastName" id="last-name" placeholder="Apellido" ngModel maxlength="50" autocomplete="lastname">
             </div>
             <div>
                 <label for="email">Email*</label>
-                <input name="email" id="email" type="text" placeholder="Email" ngModel #email="ngModel" required="true"
+                <input name="email" id="email" type="text" placeholder="Email*" ngModel #email="ngModel" required="true"
                     autocomplete="email">
             </div>
             <div>
                 <label for="password">Contraseña*</label>
-                <input name="password" id="password" type="password" placeholder="Contraseña" ngModel
+                <input name="password" id="password" type="password" placeholder="Contraseña*" ngModel
                     #password="ngModel" autocomplete="new-password" required="true">
             </div>
             <div>
                 <label for="password2">Repetir Contraseña*</label>
-                <input name="password2" id="password2" type="password" placeholder="Repetir contraseña" ngModel
+                <input name="password2" id="password2" type="password" placeholder="Repetir contraseña*" ngModel
                     #password2="ngModel" autocomplete="new-password" required="true">
             </div>
             @if (!firstName.pristine && firstName.invalid || !email.pristine && email.invalid || !password.pristine &&
             password.invalid || !password2.pristine && password2.invalid || errorRegisterForm) {
             <p class="error">* Completar campos obligatorios.</p>
             }
+            @if (errorPasswords) {
+            <p class="error">Las contraseñas no coinciden.</p>
+            }
             <div>
                 <button>Crear cuenta</button>
-                @if (isLoading) {
-                <p class="error">Cargando...</p>
-                }
-                @if (errorRegisterService) {
-                <p class="error">Error indeterminado, intente nuevamente.</p>
-                }
-                <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
             </div>
+            <div class="spinner">
+                @if (backRequest) {
+                    <app-spinner/>
+                }
+            </div>
+                @if (errorService) {
+                    <p class="error">Error indeterminado, intente nuevamente.</p>
+                }
         </form>
+        <p>¿Ya tenés cuenta? <a routerLink="/login">Iniciar sesión</a></p>
     </div>
 </section>
