--- a/src/app/pages/register-page/register-page.scss
+++ b/src/app/pages/register-page/register-page.scss
@@ -1,84 +1,87 @@
-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    gap: 64px;
-}
+@use "./../login-page/login-page.scss"
 
 
-h1{
-    font-size: var(--font-size-h1);
-    font-weight: 800;
-}
-h2{
-    font-size: var(--font-size-h2);
-}
-
-.register-container{
-    background-color: var(--background-secundary-color);
-    width: var(--width-not-logged);
-    padding: 60px 35px;
-    gap: 30px;
-    border-radius: var(--border-radius);
-    box-shadow: 0px 0px 20px 1px #b6b6b6;
-}
-.flex-column{
-    display: flex;
-    flex-direction: column;
-}
+// section{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     width: 100%;
+//     height: 100vh;
+//     gap: 64px;
+// }
 
 
+// h1{
+//     font-size: var(--font-size-h1);
+//     font-weight: 800;
+// }
+// h2{
+//     font-size: var(--font-size-h2);
+// }
+
+// .register-container{
+//     background-color: var(--background-secundary-color);
+//     width: var(--width-not-logged);
+//     padding: 60px 35px;
+//     gap: 30px;
+//     border-radius: var(--border-radius);
+//     box-shadow: 0px 0px 20px 1px #b6b6b6;
+// }
+// .flex-column{
+//     display: flex;
+//     flex-direction: column;
+// }
 
 
-input{
-    background: transparent;
-    border: none;
-    padding: 10px;
-    background-color: var(--input-bar-color);
-    width: 100%;
-    box-shadow: 0 2px var(--button-secundary-color);
-    transition: box-shadow 0.3s ease;
-}
-input::placeholder{
-    font-size: var(--font-size);
-}
-
-input:focus{
-    outline: none;
-    box-shadow: 0 2px var(--button-primary-color);
-}
 
 
-img{
-    max-width: 20px;
-    height: auto;
-    display: inline-block;
-}
+// input{
+//     background: transparent;
+//     border: none;
+//     padding: 10px;
+//     background-color: var(--input-bar-color);
+//     width: 100%;
+//     box-shadow: 0 2px var(--button-secundary-color);
+//     transition: box-shadow 0.3s ease;
+// }
+// input::placeholder{
+//     font-size: var(--font-size);
+// }
+
+// input:focus{
+//     outline: none;
+//     box-shadow: 0 2px var(--button-primary-color);
+// }
 
 
-button{
-    background-color: var(--button-primary-color);
-    color: var(--font-button-primary-color);
-    border-radius: var(--border-radius);
-    padding: 10px;
-    border: none;
-    font-size: var(--font-size);
-    font-weight: 600;
-}
-button:hover{
-    background-color: var(--button-primary-hover-color);
-    color: var(--font-button-primary-color);
-}
-button:active{
-    color: var(--font-button-primary-active-color);
+// img{
+//     max-width: 20px;
+//     height: auto;
+//     display: inline-block;
+// }
 
-}
 
-p{
-    font-size: var(--font-size-p);
-    text-align: end;
-}
+// button{
+//     background-color: var(--button-primary-color);
+//     color: var(--font-button-primary-color);
+//     border-radius: var(--border-radius);
+//     padding: 10px;
+//     border: none;
+//     font-size: var(--font-size);
+//     font-weight: 600;
+// }
+// button:hover{
+//     background-color: var(--button-primary-hover-color);
+//     color: var(--font-button-primary-color);
+// }
+// button:active{
+//     color: var(--font-button-primary-active-color);
+
+// }
+
+// p{
+//     font-size: var(--font-size-p);
+//     text-align: end;
+// }
 
