Correcciones en login y register

--- a/src/app/pages/login-page/login-page.scss
+++ b/src/app/pages/login-page/login-page.scss
@@ -78,7 +78,9 @@ button:hover{
 }
 button:active{
     color: var(--font-button-primary-active-color);
-
+}
+button:disabled{
+    background-color: var(--button-disabled-color);
 }
 
 p{
