--- a/src/app/pages/login-page/login-page.html
+++ b/src/app/pages/login-page/login-page.html
@@ -10,20 +10,20 @@
             <div>
                 <label for="password" class="visually-hidden">Contraseña</label>
                 <input type="password" id="password" name="password" placeholder="Contraseña" ngModel required
-                    #password="ngModel" minlength="8">
+                    #password="ngModel">
             </div>
-            @if((!email.pristine && email.invalid) || (!password.pristine && password.invalid) || errorLoginForm){
-                <p class="error">Email o contraseña invalido</p>
+            @if((!email.pristine && email.invalid) || (!password.pristine && password.invalid)){
+                <p class="error">Email o contraseña invalido.</p>
                 }
-            <button>Acceder</button>
             <div class="spinner">
                 @if (backRequest) {
                     <app-spinner/>
                 }
             </div>
-                @if (errorService) {
-                    <p class="error">Error indeterminado, intente nuevamente.</p>
+                @if (error) {
+                    <p class="error">Datos incorrectos, intente nuevamente.</p>
                 }
+            <button [disabled]="loginUserForm.invalid || backRequest">Acceder</button>
         </form>
         <p>¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>
     </div>
