--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,7 @@ a{
     --button-primary-hover-color: #018a7e;
     --button-primary-active-color: #018075;
 	--button-secundary-color: #dcf1ee;
+	--button-disabled-color: #01807562;
     // --boton-color: #B9B28A;
 	--nav-bar-top-color: #f0f4f7;
 	--nav-bar-left-color: #00998f;
