Agrego editar contacto, sin terminar

--- a/src/app/components/contact-list-item/contact-list-item.html
+++ b/src/app/components/contact-list-item/contact-list-item.html
@@ -8,4 +8,4 @@
     </span>
 </p>
 <button (click)="contactsService.deleteContact(contact().id)">borrar</button>
-<a [routerLink]="['/contacts', contact().id, 'details']">detalles</a>
+<a [routerLink]="['/', contact().id, 'details']">detalles</a>
