Correcciones en crear/editar contacto

--- a/src/app/pages/contact-details-page/contact-details-page.scss
+++ b/src/app/pages/contact-details-page/contact-details-page.scss
@@ -1,3 +1,13 @@
 section {
     height: 100vh;
 }
+
+.clean {
+  all: unset;        
+  cursor: pointer;
+  display: inline-block;
+}
+
+svg{
+    fill: var(--nav-bar-left-color);
+}
