--- a/src/app/pages/contact-details-page/contact-details-page.html
+++ b/src/app/pages/contact-details-page/contact-details-page.html
@@ -1,8 +1,31 @@
 <section>
     <div>
         <a routerLink="/">X</a>
-    </div>
-    <div>
+        @if (contactBack?.isFavorite) {
+        <button class="clean"  (click)="markUnmarkFavorite()">
+            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24"
+                width="24px">
+                <g>
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                    <path d="M0 0h24v24H0V0z" fill="none" />
+                </g>
+                <g>
+                    <path
+                        d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27z" />
+                </g>
+            </svg>
+        </button>
+        }
+        @else {
+        <button class="clean" (click)="markUnmarkFavorite()">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px">
+                <path d="M0 0h24v24H0V0z" fill="none" />
+                <path
+                    d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z" />
+            </svg>
+        </button>
+        }
+
         <a [routerLink]="['/', idContact() ,'edit']">Editar</a>
     </div>
     <div>
@@ -16,5 +39,3 @@
         <p>Contacto ID: {{idContact()}}</p>
     </div>
 </section>
-
-
